styles/index.css
#slideshow {
  width: 100%;
  /* height: 400px; */
  background-color: rgb(141 199 194);
  display: flex;
}
.imgSlideshow {
  width: 100%;
}
section {
  width: 70%;
  margin-left: 15%;
  margin-right: 15%;
  text-align: center;
}
section h1 {
  letter-spacing: 3px;
  font-size: 5vw;
  line-height: 100px;
  font-weight: 300;
}
article {
  width: 65%;
  margin-left: 17.5%;
  margin-right: 17.5%;
  justify-content: space-around;
  display: flex;
  margin-top: 80px;
}
.content {
  padding: 0px 10px;
  align-items: center;
  width: 45%;
  word-wrap: normal;
}

article p {
  margin-top: 2vw;
  width: 100%;
  line-height: 24px;
}
article h2 {
  font-size: 3vw;
  line-height: 40px;
  font-weight: 500;
  letter-spacing: 0.5px;
}

.imgBigscreen {
  width: 417px;
  /* max-height: 250px; */
}
.imgSmallscreen {
  display: none;
}

footer {
  margin-top: 200px;
  width: 100%;
  text-align: center;
  padding-top: 40px;
  padding-bottom: 40px;
  color: gray;
  font-weight: 80;
}
@media only screen and (max-width: 850px) {
  section {
    width: 100%;
    margin-left: 0%;
    margin-right: 0%;
  }
  section h1 {
    font-size: 7vw;
  }
  article {
    width: 100%;
    margin-left: 0%;
    margin-right: 0%;
    display: block;
  }
  .content {
    width: 100%;
    padding: 0px;
  }
  .content p,
  h2 {
    margin: 2.5%;
    width: 95%;
  }
  article h2 {
    font-size: 5vw;
  }
  .cirkle {
    display: none;
  }
  .imgBigscreen {
    display: none;
  }
  .imgSmallscreen {
    display: inline;
    width: 100%;
    margin-top: 50px;
  }
  .imgSmallscreen img {
    width: 100%;
  }
  .imgSmallscreen figcaption {
    height: 25px;
    margin-left: 2.5%;
    color: grey;
    font-style: italic;
    font-size: 2.5vw;
    font-weight: 200;
  }

  footer {
    margin-top: 50px;
  }
}
@media (min-width: 850px) and (max-width: 1024px) {
  section,
  article {
    margin-left: 5%;
    margin-right: 5%;
    width: 90%;
  }
  .imgBigscreen {
    width: 345px;
  }
}

